--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,5 +30,5 @@ security:
          - { path: ^/Admin, roles: ROLE_ADMIN }
 
     encoders: 
-        App\Entity\Donneur:
+        App\Entity\Admins:
             algorithm: auto
