--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,13 +1,14 @@
 vich_uploader:
     db_driver: orm
 
+    mappings:
+        actu_image:
+            uri_prefix: /img/actus
+            upload_destination: '%kernel.project_dir%/public/img/actus'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
+            
     #mappings:
     #    products:
     #        uri_prefix: /images/products
     #        upload_destination: '%kernel.project_dir%/public/images/products'
 
-    mappings:
-        actu_image:
-            uri_prefix: /img/actus
-            upload_destination: '%kernel.project_dir%/public/img/actus'
-            
