--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,10 +6,10 @@ vich_uploader:
             uri_prefix: /img/actus
             upload_destination: '%kernel.project_dir%/public/img/actus'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
-        
+            
         etablissement_image:
-            uri_prefix: /img/etablissement
-            upload_destination: '%kernel.project_dir%/public/img/etablissement'
+            uri_prefix: /img/logoPartenaires
+            upload_destination: '%kernel.project_dir%/public/img/logoPartenaires'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
             
     #mappings:
